# mrmr

./: .gitignore  .gitmessage  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml  prek.toml  rust-toolchain.toml
.githooks/: prepare-commit-msg
.github/workflows/: ci.yml
crates/mrmr-app/: Cargo.toml
crates/mrmr-app/src/: lib.rs
crates/mrmr-cli/: Cargo.toml
crates/mrmr-cli/src/: main.rs
crates/mrmr-core/: Cargo.toml
crates/mrmr-core/src/: lib.rs
docs/: SPEC.md
docs/learn/: 00-curriculum-overview.md  week-01-assignments.md  week-01-concept.md  week-01-quiz.md  xx-glossary.md
templates/workspace-skeleton/: Cargo.toml  LICENSE-MIT  README.md  TEMPLATE.md  deny.toml  init_git.sh  prek.toml  rust-toolchain.toml  template.toml
templates/workspace-skeleton/.github/workflows/: ci.yml
templates/workspace-skeleton/crates/{{ project_slug }}-app/: Cargo.toml
templates/workspace-skeleton/crates/{{ project_slug }}-app/src/: lib.rs
templates/workspace-skeleton/crates/{{ project_slug }}-cli/: Cargo.toml
templates/workspace-skeleton/crates/{{ project_slug }}-cli/src/: main.rs
templates/workspace-skeleton/crates/{{ project_slug }}-core/: Cargo.toml
templates/workspace-skeleton/crates/{{ project_slug }}-core/src/: lib.rs
templates/workspace-skeleton/docs/home/leechristophermurray/Projects/mrmr/docs/: SPEC.md
