# /mrmr/Cargo.toml — the WORKSPACE manifest (not a crate)
[workspace]
resolver = "3"
members = [
  "crates/mrmr-core",
  "crates/mrmr-app",
  "crates/mrmr-cli",
]

[workspace.lints.rust]
unsafe_code = "deny"   # we'll relax this only inside audited modules later

[workspace.lints.clippy]
pedantic   = { level = "warn", priority = -1 }
nursery    = { level = "warn", priority = -1 }
unwrap_used  = "warn"
expect_used  = "warn"
panic        = "warn"
todo         = "warn"
dbg_macro    = "deny"
print_stdout = "warn"  # we use `tracing`, not println
print_stderr = "warn"

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0 OR MIT"
authors = ["Christopher Murray <lee.christopher.murray@gmail.com>"]
repository = "https://github.com/leechristophermurray/mrmr"

[workspace.dependencies]
# Versions declared here, referenced by `.workspace = true` in member crates.
serde     = { version = "1", features = ["derive"] }
thiserror = "2"
ulid      = { version = "1", features = ["serde"] }
jiff      = { version = "0.2", features = ["serde"] }
tracing   = "0.1"
