[package]
name = "mrmr-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
mrmr-core = { path = "../mrmr-core", version = "0.1.0" }
mrmr-app = { path = "../mrmr-app", version = "0.1.0" }

[lints]
workspace = true
