# /mrmr/Cargo.toml — the WORKSPACE manifest (not a crate)
[workspace]
resolver = "3"
members = [
  "crates/{{ project_slug }}-core",
  "crates/{{ project_slug }}-app",
  "crates/{{ project_slug }}-cli",
]

[workspace.lints.rust]
unsafe_code = "deny"   # we'll relax this only inside audited modules later

[workspace.lints.clippy]
pedantic   = { level = "warn", priority = -1 }
nursery    = { level = "warn", priority = -1 }
unwrap_used  = "warn"
expect_used  = "warn"
panic        = "warn"
todo         = "warn"
dbg_macro    = "deny"
print_stdout = "warn"  # we use `tracing`, not println
print_stderr = "warn"

[workspace.package]
edition = "{{ edition }}"
rust-version = "{{ rust_version }}"
license = "{{ license }}"
authors = ["{{ authors_line }}"]
repository = "https://github.com/{{ authors_git_username }}/{{ project_slug }}"

[workspace.dependencies]
# Versions declared here, referenced by `.workspace = true` in member crates.
serde     = { version = "1", features = ["derive"] }
thiserror = "2"
ulid      = { version = "1", features = ["serde"] }
jiff      = { version = "0.2", features = ["serde"] }
tracing   = "0.1"
