[package]
name = "{{ project_slug }}-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
{{ project_slug }}-core = { path = "../{{ project_slug }}-core", version = "0.1.0" }


[lints]
workspace = true
